# gladdened

./: CMakeLists.txt  f_font.c  f_font.h  g_glfw.h  gladdened.c  gladdened.h  main.c  o_opengl.c  o_opengl.h  o_shaders.h  opengl.c  readme.md  todo.md  window.h
scratch/: garbage.c  man  print.c
shaders/: triangle.frag  triangle.vert
